k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  selector:
    app: laravel-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
